tests/test48.rael.exp
Error [1:1]: '^' outside a routine is not permitted
| ^ 1
| ^
